--- a/loto1/.classpath
+++ b/loto1/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.4"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/softonPack"/>
+	<classpathentry kind="lib" path="lib/batik-svggen.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
