--- a/loto1/pom.xml
+++ b/loto1/pom.xml
@@ -31,5 +31,15 @@
   		<artifactId>log4j</artifactId>
   		<version>1.2.8</version>
   	</dependency>
+  	<dependency>
+  		<groupId>batik</groupId>
+  		<artifactId>batik-extension</artifactId>
+  		<version>1.6-1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>batik</groupId>
+  		<artifactId>batik-ext</artifactId>
+  		<version>1.6-1</version>
+  	</dependency>
   </dependencies>
 </project>
